# 1RTT-KEMTLS

./: .gitignore  .gitmodules  Dockerfile  README-simon.txt  README.md
1RTTKEMTLS/: Cargo.toml
1RTTKEMTLS/src/msgs/: README.md
certificates/: dumpy.py
certificates/1RTT-KEMTLS/: client-ca.crt  client-ca.key  client-ca.pub  client.crt  client.epoch  client.key  client.pub  kem-ca.crt  kem-ca.key  kem-ca.pub  kem-int.crt  kem-int.key  kem-int.pub  kem.chain.crt  kem.crt  kem.key  kem.pub  new_kem_ssrttkemtls.key  new_server.epoch  semistatic-epoch-1.epoch  semistatic-epoch-1.key  semistatic-epoch-1.pub  semistatic-epoch-2.epoch  semistatic-epoch-2.key  semistatic-epoch-2.pub  server.epoch
certificates/kem/: kem-ca.crt  kem-ca.key  kem-ca.pub  kem-int.crt  kem-int.key  kem-int.pub  kem.chain.crt  kem.crt  kem.pub
certificates/signing/: signing-ca.crt  signing-ca.key  signing-ca.pub  signing-int.crt  signing-int.key  signing-int.pub  signing.all.crt  signing.chain.crt  signing.crt  signing.key  signing.pub
measuring/: run_experiment.sh
measuring/scripts/: experiment.py  process.py
mk-cert/: encoder.py  mov.sh
oqs-rs/oqs-sys/liboqs/.CMake/: alg_support.cmake
rustls/: generate_schemes.py
rustls/rustls-mio/examples/: tlsclient.rs  tlsserver.rs
rustls/rustls/src/: check.rs  epoch.rs  hash_hs.rs  key_schedule.rs  lib.rs  pemfile.rs  sign.rs  spk_encoder.rs
rustls/rustls/src/client/: default_group.rs  handy.rs  hs.rs  mod.rs  tls13.rs
rustls/rustls/src/msgs/: codec.rs  enums.rs  handshake.rs  (+1 more)
webpki/src/: kem.rs  pk_decoder.rs  signed_data.rs  webpki.rs
(+4 files in other folders)
